22º commit
Seguimiento entre usuario ya funciona. Registrar usuario sigue dando fallos, correciones de errores.